--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^9.9.0",
-    "axios": "^1.7.0"
+    "axios": "^1.7.0",
+    "express": "^4.18.0"
   },
   "engines": {
     "node": ">=18"
