--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@line/bot-sdk": "^9.9.0",
     "axios": "^1.7.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "franc": "^6.2.0"
   },
   "engines": {
     "node": ">=18"
