--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "line-translation-bot",
   "version": "1.0.0",
-  "description": "LINE multi-language translation bot using DeepL API",
+  "description": "LINE multi-language translation bot using Gemini API with DeepL fallback",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "deploy": "gcloud functions deploy lineTranslationBot --runtime nodejs20 --trigger-http --allow-unauthenticated --set-env-vars LINE_CHANNEL_ACCESS_TOKEN=$LINE_CHANNEL_ACCESS_TOKEN,LINE_CHANNEL_SECRET=$LINE_CHANNEL_SECRET,DEEPL_API_KEY=$DEEPL_API_KEY"
+    "deploy": "gcloud functions deploy lineTranslationBot --runtime nodejs20 --trigger-http --allow-unauthenticated --set-env-vars LINE_CHANNEL_ACCESS_TOKEN=$LINE_CHANNEL_ACCESS_TOKEN,LINE_CHANNEL_SECRET=$LINE_CHANNEL_SECRET,DEEPL_API_KEY=$DEEPL_API_KEY,GEMINI_API_KEY=$GEMINI_API_KEY"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@line/bot-sdk": "^9.9.0",
     "axios": "^1.7.0",
     "express": "^4.18.0",
